--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -11,13 +11,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:padding="12dp"
         android:background="#EEEEEE">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/list"
+            android:paddingBottom="10dp"
+            android:clipToPadding="false"
             android:divider="@android:color/transparent"
             android:dividerHeight="8dp"/>
 
