--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -1,47 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:id="@+id/cLayout"
-    android:background="#EEEEEE">
+    android:id="@+id/cLayout">
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="#EEEEEE">
+        android:background="#E0E0E0">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/list"
+            android:paddingTop="?attr/actionBarSize"
             android:paddingBottom="10dp"
             android:clipToPadding="false"
             android:divider="@android:color/transparent"
             android:dividerHeight="8dp"/>
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            app:fab_addButtonColorNormal="#D32F2F"
+            app:fab_addButtonColorPressed="#B71C1C"
+            android:layout_marginBottom="15dp"
+            fab:fab_labelsPosition="left"
+            fab:fab_labelStyle="@style/menu_labels_style"
+            android:layout_marginEnd="15dp"
+            android:id="@+id/add_menu">
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="#43A047"
+                app:fab_colorPressed="#2E7D32"
+                fab:fabSize="mini"
+                app:fab_icon="@drawable/ic_gallery_add" />
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="#43A047"
+                app:fab_colorPressed="#2E7D32"
+                fab:fabSize="mini"
+                app:fab_icon="@drawable/ic_camera_add" />
+
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
     </FrameLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_gallery"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="end|bottom"
-        android:layout_marginBottom="95dp"
-        android:layout_marginEnd="15dp"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/ic_gallery_add" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_camera"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="end|bottom"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/ic_camera_add" />
 
 </android.support.design.widget.CoordinatorLayout>
