--- a/app/src/main/res/layout/image_card.xml
+++ b/app/src/main/res/layout/image_card.xml
@@ -18,6 +18,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/rel">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:text="Problem loading image"
+                android:textAlignment="center"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:id="@+id/error"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"/>
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyle"
@@ -27,7 +39,8 @@
                 android:visibility="visible"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="50dp" />
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"/>
 
             <ImageView
                 android:id="@+id/image"
