--- a/app/src/main/res/layout/image_card.xml
+++ b/app/src/main/res/layout/image_card.xml
@@ -18,14 +18,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/rel">
 
-            <TextView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
-                android:text="Problem loading image"
-                android:textAlignment="center"
                 android:layout_centerInParent="true"
                 android:visibility="gone"
+                android:src="@drawable/ic_error_load_82dp"
                 android:id="@+id/error"
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="25dp"/>
