--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -12,7 +12,12 @@
         android:layout_width="match_parent"
         android:background="#E0E0E0">
 
-        <android.support.v7.widget.RecyclerView
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rLayout">
+
+            <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/list"
@@ -22,7 +27,16 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="8dp"/>
 
-        <android.support.v7.widget.Toolbar
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#AA000000"
+                android:id="@+id/blur"
+                android:visibility="gone"/>
+
+        </FrameLayout>
+
+            <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
